crates/cli/tests/snapshots/unused_lambda_param__fix_49ce39aa53b9394c5323ba8cbc44776dac37dbd1ac9204f543bc9f111cc2b08d.snap
---
source: crates/cli/tests/unused_lambda_param.rs
expression: "\"drv: { name = \\\"demo\\\"; }\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-drv: { name = "demo"; }
+_: { name = "demo"; }
