crates/cli/tests/snapshots/unused_lambda_param__fix_77759e6b3e53897328da7a557c81564c69c95d6894d30f6e32418c1763d0d0b4.snap
---
source: crates/cli/tests/unused_lambda_param.rs
expression: "\"x: 42\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-x: 42
+_: 42
