crates/cli/tests/snapshots/unused_lambda_param__fix_fa5c6816807a1d9cb6ef37a7da62238d0cdbfc14632089a893ab008586e43305.snap
---
source: crates/cli/tests/unused_lambda_param.rs
expression: "\"x: let y = 1; in x + y\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-x: let y = 1; in x + y
+x: x + (1)
