crates/cli/tests/snapshots/unused_lambda_param__lint_49ce39aa53b9394c5323ba8cbc44776dac37dbd1ac9204f543bc9f111cc2b08d.snap
---
source: crates/cli/tests/unused_lambda_param.rs
expression: "\"drv: { name = \\\"demo\\\"; }\""
---
[31] Warning: This lambda parameter is never used
   ╭─[<temp_file_path>:1:1]
   │
 1 │ drv: { name = "demo"; }
   │ ─┬─  
   │  ╰─── drv is never used; replace it with _
───╯
