crates/cli/tests/snapshots/unused_lambda_param__lint_77759e6b3e53897328da7a557c81564c69c95d6894d30f6e32418c1763d0d0b4.snap
---
source: crates/cli/tests/unused_lambda_param.rs
expression: "\"x: 42\""
---
[31] Warning: This lambda parameter is never used
   ╭─[<temp_file_path>:1:1]
   │
 1 │ x: 42
   · ┬  
   · ╰── x is never used; replace it with _
───╯
