crates/cli/tests/snapshots/unused_lambda_param__lint_fa5c6816807a1d9cb6ef37a7da62238d0cdbfc14632089a893ab008586e43305.snap
---
source: crates/cli/tests/unused_lambda_param.rs
expression: "\"x: let y = 1; in x + y\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:1:8]
   │
 1 │ x: let y = 1; in x + y
   │        ───┬──        ┬  
   │           ╰───────────── y is only used once; consider inlining
   │                      │  
   │                      ╰── y is only used once; consider inlining
───╯
